--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
@@ -94,7 +94,7 @@
                   <tbody *ngIf="branches?.length != 0">
                     <tr *ngFor="let branch of branches let i=index" >
                       <td>{{ i+1 }}</td>
-                      <td>{{ branch.branchCode }}</td>
+                      <td>{{ branch.countryName }}</td>
                       <td>{{ branch.branchName }}</td>
                     </tr>
                   </tbody>
