--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/lo-productivity-tab/lo-productivity-tab.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/lo-productivity-tab/lo-productivity-tab.component.html
@@ -51,7 +51,7 @@
                         <tr>
                             <th>SL No.</th>
                             <th>Branch Name</th>
-                            <th>Staff TurnOver(%)</th>
+                            <th>LO Productivity</th>
                             <th>Score</th>
                             <th>Rating</th>
                         </tr>
@@ -62,13 +62,18 @@
                             <td> {{i + 1}} </td>
                             <td>{{ riskAssessment.branchName }}</td>
                             <td>
-                                <div>
-                                    <input type="number" class="form-control" id="staffTurnover" placeholder="Staff TurnOver" (change)="GetProductivity($event, i)">
+                                <div form-floating>
+                                    <select aria-label="Floating label select example" (change)="GetloProd($event, i)" cSelect id="fraudFound" name="loProductivity">
+                                        <option value=null title="null">Select</option>
+                                        <option *ngFor="let loProd of loProductivity" [value]="loProd.value">
+                                            {{loProd.text}}
+                                        </option>
+                                    </select>
                                 </div>
                             </td>
                             <td>
                                 <div form-floating>
-                                    <select aria-label="Floating label select example" (change)="GetRating($event, i)" cSelect id="Score" name="Score">
+                                    <select aria-label="Floating label select example" (change)="GetRating($event, i)" cSelect id="Score" name="Score" [selected]="selectedScore[i]">
                                         <option value=null title="null">Select</option>
                                         <option *ngFor="let score of scores" [value]="score.text">
                                             {{score.value}}
