--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/overdue-tab/overdue-tab-component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/overdue-tab/overdue-tab-component.html
@@ -19,7 +19,7 @@
                                             {{country.name}}
                                         </option>
                                     </select>
-                                    <label for="countryId" class="dropdownLabel">Designation</label>
+                                    <label for="countryId" class="dropdownLabel">Country</label>
                                   </div>
                                 <div class="form-floating mb-3 mt-4">
                                     <input type="text" class="form-control" formControlName="conversionRate"
