--- a/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
+++ b/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
                 <c-col md>
                     <c-card class="mb-4"  style="margin-right: 2%;">
                         <c-card-header class="Header_Title">
-                            <c-icon name="cilFile"></c-icon> <strong><span> Documents </span></strong>
+                            <c-icon name="cilFile"></c-icon> <strong><span> My Document </span></strong>
                         </c-card-header>
                         <c-card-body> 
                           <div class="row overflow-auto">
