--- a/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.html
@@ -4,7 +4,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          <i class="fa fa-align-justify" ></i> Email Configuration List
+          <i class="fa fa-align-justify" ></i> <strong> Email Configuration </strong>
         </div>
         <div class="card-body">
           <form [formGroup]="emailConfigSearchForm">
@@ -37,7 +37,7 @@
                     <th>Country</th>
                     <th>Template Subject</th>
                     <th>Template Body</th>
-                    <th>CreatedOn</th>
+                    <!-- <th>CreatedOn</th> -->
                     <th>Actions</th>
                   </tr>
                 </thead>
@@ -47,7 +47,7 @@
                     <td>{{ config.countryName }}</td>
                     <td>{{ config.templateSubject }}</td>
                     <td>{{ config.templateBody }}</td>
-                    <td>{{ config.createdOn | date:'medium' }}</td>
+                    <!-- <td>{{ config.createdOn | date:'medium' }}</td> -->
                     <td>
                       <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,config)">
