--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -3,7 +3,7 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <div class="fa fa-align-justify"><strong>Risk Profile List</strong></div> 
+            <div class="fa fa-align-justify"><strong>Risk Profile</strong></div> 
           </div>
           <div class="card-body">
             
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-md-5 mb-2 form-floating">
                   <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="search by likelihood level/impact level/risk rating"/>
-                  <label class="searchLevel" for="floatingInput"> Search by Likelihood level/Impact level/Risk rating</label>
+                  <label class="searchLevel" for="floatingInput"> Search by Risk rating/level of Likelihood/Impact</label>
                 </div>
                 <div class="col-md-1 mb-2">
                   <button type="button" class="btn btn-secondary mr-1 btn-block " data-toggle="modal" (click)="search()" >
@@ -33,8 +33,8 @@
                       <th>Level of Impact</th>
                       <th>Risk Rating</th>
                       <th>Description</th>
-                      <th>Effective From</th>
-                      <th>Effective To</th>  
+                      <!-- <th>Effective From</th>
+                      <th>Effective To</th>   -->
                       <th class="col-1 text-center">Actions</th>                   
                     </tr>
                   </thead>
@@ -44,8 +44,8 @@
                       <td>{{ riskProfile.impactType }}</td>
                       <td>{{ riskProfile.ratingType }}</td>
                       <td>{{ riskProfile.description }}</td>
-                      <td>{{ riskProfile.effectiveFrom | date:'medium' }}</td>
-                      <td>{{ riskProfile.effectiveTo | date:'medium' }}</td>
+                      <!-- <td>{{ riskProfile.effectiveFrom | date:'medium' }}</td>
+                      <td>{{ riskProfile.effectiveTo | date:'medium' }}</td> -->
                       <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
                           <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,riskProfile)">
@@ -74,7 +74,7 @@
   <form [formGroup]="riskProfileForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate>
   <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
     <c-modal-header>
-      <h5 cModalTitle *ngIf="!formService.isEdit(this.riskProfileForm.get('id'))">Create Risk Profile</h5>
+      <h5 cModalTitle *ngIf="!formService.isEdit(this.riskProfileForm.get('id'))">New Risk Profile</h5>
       <h5 cModalTitle *ngIf="formService.isEdit(this.riskProfileForm.get('id'))">Update Risk Profile</h5>
       <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
     </c-modal-header>
@@ -91,7 +91,7 @@
                   {{commonValueAndType.text}}
                 </option>
               </select>
-              <label for="likelihoodTypeId" >Likelihood Level</label>
+              <label for="likelihoodTypeId" >Level of Likelihood </label>
             </div>
             <div cRow *ngIf="(riskProfileForm.get('likelihoodTypeId')?.invalid && riskProfileForm.get('likelihoodTypeId')?.errors) &&         
               (riskProfileForm.get('likelihoodTypeId')?.dirty || riskProfileForm.get('likelihoodTypeId')?.touched)">
@@ -109,7 +109,7 @@
                   {{commonValueAndType.text}}
                 </option>
               </select>
-              <label for="impactTypeId" >Impact Level</label>
+              <label for="impactTypeId" >Level of Impact</label>
             </div>
             <div cRow *ngIf="((riskProfileForm.get('impactTypeId')?.invalid && riskProfileForm.get('impactTypeId')?.errors)) &&
               (riskProfileForm.get('impactTypeId')?.dirty || riskProfileForm.get('impactTypeId')?.touched)">
