--- a/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-4 offset-4">
   <c-card>
     <c-card-header>
-      <h5 cCardTitle>Change Your Password</h5>
+      <h5 cCardTitle>Create New Password</h5>
     </c-card-header>
     <c-card-body>
       <form [formGroup]="changePasswordForm" (submit)="submit()">
@@ -60,7 +60,7 @@
                 </div>
           </div>
         </form>
-      <button cButton color="primary" (click)="submit()">Change Password</button>
+      <button cButton color="primary" (click)="submit()">Submit</button>
     </c-card-body>
   </c-card>
 </div>
