--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <i class="fa fa-align-justify" ></i><strong>Designation List</strong>
+            <i class="fa fa-align-justify" ></i><strong>Designation</strong>
           </div>
           <div class="card-body">
             <!-- <form [formGroup]="searchForm">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-5 mb-2 form-floating">
                   <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="Search by designation/description"/>
-                  <label class="searchLevel" for="floatingInput"> Search by designation/description</label>
+                  <label class="searchLevel" for="floatingInput"> Search by Designation/Description</label>
                 </div>
                 <div class="col-md-1 mb-2">
                   <button type="button" class="btn btn-secondary mr-1 btn-block " data-toggle="modal" (click)="search()" >
@@ -88,7 +88,7 @@
   <form [formGroup]="designationForm" (ngSubmit)="onSubmit(verticallyCenteredModal)" novalidate>
     <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
       <c-modal-header>
-        <h5 cModalTitle *ngIf="!formService.isEdit(this.designationForm.get('id'))">Create Designation</h5>
+        <h5 cModalTitle *ngIf="!formService.isEdit(this.designationForm.get('id'))">New Designation</h5>
         <h5 cModalTitle *ngIf="formService.isEdit(this.designationForm.get('id'))">Update Designation</h5>
         <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button>
       </c-modal-header>
@@ -98,7 +98,7 @@
     
             <div class="form-floating mb-3">
               <input type="text" class="form-control" formControlName="name" id="name" placeholder="Name">
-              <label for="floatingInput">Name</label>
+              <label for="floatingInput">Designation</label>
 
               <div cRow *ngIf="designationForm.get('name')?.invalid &&
             designationForm.get('name')?.errors &&
