Dashboard Column name updated

--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -40,7 +40,7 @@
                   <tr *ngFor="let country of countries">
                     <td>{{ country.code }}</td>
                     <td>{{ country.name }}</td>
-                    <td>{{ country.createdOn | date:'medium' }}</td>
+                    <td>{{ country.createdOn | date:'mediumDate' }}</td>
                     <td>{{ country.remarks }}</td>
                     <td class="text-center">
                       <div class="btn-group" role="group" aria-label="Basic example">
