reset password mail modification

--- a/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
+++ b/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
@@ -25,7 +25,10 @@
             </div>
 
            <div *ngIf="isResetLinkSent">
-             <h3>Password reset link has sent to your email. Please your check inbox.</h3>
+            <h6>An email instruction has been sent.<br>
+            Please check your mail. If you doesn't have any e-mail please contact with system admin.
+            </h6>
+             <!-- <h3>Password reset link has sent to your email. Please your check inbox.</h3> -->
            </div>
           </c-card-body>
         </c-card>
