--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
@@ -84,8 +84,8 @@
                             <td>{{ riskAssessment.branchName }}</td>
                             <td>{{ riskAssessment.amount }}</td>
                             <td>{{ riskAssessment.amountConverted }}</td>
-                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.text }} </td>
-                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.value }} </td>
+                            <td> {{ riskAssessment.text }} </td>
+                            <td> {{ riskAssessment.score }} </td>
                             <td> {{ tableTempData }}</td>
                             <td> {{i + 1}} </td>
                             <td>{{ riskAssessment.branchName }}</td>
